--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root" class="antialiased font-sans"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
